# rustsbi-hifive-unmatched

./: Cargo.toml  README.md  build.rs  openocd.cfg  sd-image-debug.its  sd-image-release.its  sd-image.its
.cargo/: config.toml
rustsbi-hifive-unmatched/: Cargo.toml  build.rs
rustsbi-hifive-unmatched/src/: console.rs  device_tree.rs  early_trap.rs  execute.rs  hart_csr_utils.rs  main.rs  runtime.rs  u740.ld  util.rs
rustsbi-hifive-unmatched/src/feature/: emulate_rdtime.rs  transfer_trap.rs
rustsbi-hifive-unmatched/src/peripheral/: clint.rs  mod.rs  uart.rs
src/: main.rs  runtime.rs
test-kernel/: Cargo.toml  sd-image-debug.its
test-kernel/src/: console.rs  main.rs  sbi.rs
xtask/: Cargo.toml
xtask/src/: main.rs
