[package]
name = "rustsbi-hifive-unmatched"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.7"
fu740-hal = { path = "../fu740-hal" }
rustsbi = "0.2.0-alpha.7"
buddy_system_allocator = "0.8"
