[package]
name = "rustsbi-hifive-unmatched"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.7"
fu740-hal = { git = "https://github.com/riscv-rust/fu740-hal" }
rustsbi = { path = "../../rustsbi" }
buddy_system_allocator = "0.8"
embedded-hal = "0.2.6"
nb = "1"
r0 = "1"
spin = { version = "0.9", features = ["ticket_mutex"] }
# device_tree = { git = "https://github.com/rcore-os/device_tree-rs/" }
